--- a/src/assets/experiences.css
+++ b/src/assets/experiences.css
@@ -1,8 +1,9 @@
 .cardParent{
     display: flex;
     flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
-    width: 1200px;
+    width: 100%;
 }
 .cardContainer{
     width: 350px;
